--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,8 @@ name = "pypi"
 [packages]
 importlib-metadata = "6.0.0"
 importlib-resources = "5.10.0"
-flask = "2.2.2"
+flask = "*"
+flask-cors = "*"
 
 [dev-packages]
 
